<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caluma</string>
    <string name="title_section3">Calendario</string>
    <string name="title_section2">Mensajes</string>
    <string name="title_section1">Asignaturas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="selectedCalendarId">1</string>
    <string name="calendarPreferences">calpref</string>
    <string name="title_login_activity">LoginActivity</string>
    <string name="hello_login">Caluny UMA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="dept">Department</string>
    <string name="description">Description</string>
    <string name="calendar_title">Calendario</string>

    <string name="create_teacher">Create Teacher</string>
    <string name="create_student">Create Student</string>
    <string name="new_teacher">New Teacher</string>
    <string name="new_student">New Student</string>
    <string name="new_user">New User</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="write_teacher_message_label">Write a message for the students.</string>
    <string name="send_label">Send</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logout_label">Log out</string>
    <string name="pick_subject_class">Elija una clase</string>

</resources>